Subida de archivos

--- a/app/src/main/res/layout/activity_archivos.xml
+++ b/app/src/main/res/layout/activity_archivos.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageButtonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="agregarArchivo"
+        android:onClick="pickFile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
